<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sharif.transportapp.view.mainView.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/home_to_ads"
            app:destination="@id/newAdsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.sharif.transportapp.view.mainView.GalleryFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.sharif.transportapp.view.mainView.SlideshowFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/newAdsFragment"
        android:name="com.sharif.transportapp.view.mainView.NewAdsFragment"
        android:label="fragment_new_ads"
        tools:layout="@layout/fragment_new_ads" />
</navigation>