<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/register_to_continue"
            android:textColor="#302F2F"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48sdp"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_13sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:helperText="required"
            app:helperTextTextColor="@android:color/holo_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_input"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_13sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:helperText="required"
            app:helperTextTextColor="@android:color/holo_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_input"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_13sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:helperText="required"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_input"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="16"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_13sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:helperText="required"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_input"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="16"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/alreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/already_accountant"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>